@@ -1,3 +1,10 @@
+2024-02-29 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/gen.c,
+	  src/SDCCsymt.c,
+	  support/regression/tests/bug-3711.c:
+	  Fix bug #3711.
+
 2024-02-20 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
